# ai-webui

./: .env.example  .gitignore  README.md  README_en.md  next.config.js  package.json  pyproject.toml  tailwind.config.ts
api/: main.py
api/db/: config.py  database.py  models.py
app/components/: Card.tsx  ThemeToggle.tsx
app/components/card/: Card.tsx  CardContainer.tsx
app/components/layout/: Headerbar.tsx
src/app/: layout.tsx  page.tsx
src/app/(protected)/: layout.tsx
src/app/(protected)/dashboard/: page.tsx
src/app/(protected)/leads/: page.tsx
src/app/(protected)/settings/team/: page.tsx
src/app/(protected)/welcome/: page.tsx
src/app/(public)/: layout.tsx  page.tsx
src/app/(public)/about/: page.tsx
src/app/(public)/login/: landing-intro.tsx  page.tsx
src/app/(public)/tools/: page.tsx
src/app/(public)/tools/about/: page.tsx
src/app/admin/: page.tsx
src/app/components/: Card.tsx
src/app/components/card/: CategoryFilter.tsx
src/app/components/layout/: Headerbar.tsx
src/app/tools/: page.tsx
src/app/tools/about/: page.tsx
src/components/: add-lead-modal-body.tsx
src/containers/: Card.tsx  confirmation-modal-body.tsx  header.tsx  left-sidebar.tsx  modal-layout.tsx  right-sidebar.tsx  sidebar-submenu.tsx
src/containers/public/: Footerbar.tsx  Headerbar.tsx
src/helper/: app-constants.ts  dummy-data.ts  sidebar-routes.tsx
src/lib/: store.ts
